export const snapshot = {};

snapshot[`example svelte main 1`] = `
\`<script>
  let name = 'world';
</script>

<div id="message"> hello {name} </div>

<style>
  
div {
  color: red;
  background: blue;
}



  #message {
    text-decoration: underline;
  }
</style>
\`
`;

snapshot[`example svelte partial 1`] = `
\`<script>
  let name = 'world';
</script>

<div class="m2">This is a paragraph</div>
<p id="message">This is a paragraph</p>

<style>
  
div {
  color: red;
  background: blue;
}


  
p {
  color: blue;
}

.m2 {
  background: yellow;
}



 #message {
    text-decoration: underline;
  }
</style>
\`
`;

snapshot[`example svelte rename 1`] = `
'<div class="m3">This is a paragraph</div>

<style>
  
.m3 {
  background: yellow;
}


</style>
'
`;
